# mobile-robot

./: .gitignore  LICENSE  cmd_vel_publisher.cpp  quad_robot.sdf
ros2_ws/cmd_vel_cpp/: CMakeLists.txt  package.xml
ros2_ws/cmd_vel_cpp/src/: cmd_vel_publisher.cpp
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/cmd_vel_cpp/share/ament_index/resource_index/parent_prefix_path/: cmd_vel_cpp
ros2_ws/install/cmd_vel_cpp/share/cmd_vel_cpp/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/cmd_vel_cpp/share/cmd_vel_cpp/cmake/: cmd_vel_cppConfig.cmake
ros2_ws/install/my_cpp_pkg/share/ament_index/resource_index/parent_prefix_path/: my_cpp_pkg
ros2_ws/install/my_cpp_pkg/share/my_cpp_pkg/: local_setup.sh  package.sh  package.xml
ros2_ws/log/: latest_build
ros2_ws/src/my_cpp_pkg/: CMakeLists.txt
ros2_ws/src/my_cpp_pkg/src/: cmd_vel_publisher.cpp
